# kontainer

./: .gitignore  .gitmodules  Dockerfile  Dockerfile-alpine  Dockerfile-alpine2  README.md  build-image.sh  docker-compose.dev.yml  docker-compose.yml  docker_build.sh  docker_run_dev.sh  pyproject.toml  run-dev.sh  run.sh  update_submodules.sh
.github/workflows/: publish.yml
docker/: entrypoint.sh
docker/nginx/: site.ssl.conf
