[project]
name = "kstack-mc"
version = "0.7.1"
description = ""
authors = [
    {name = "fm-labs",email = "flowmotionlabs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
